criando a section de slides

--- a/index.html
+++ b/index.html
@@ -40,7 +40,28 @@
     </header>
 
     <main>
-
+        <section class="banner">
+            <div class="slider">
+                <div class="slide">
+                    <div class="slide-area">
+                        <h1>Design is about <br><span>Communication</span> </h1>
+                        <h2>Call us: +00 0 1234 5678</h2>
+                        <a href="" class="banner-btn">Get in touch!</a>
+                    </div>
+                </div>
+                <div class="slide">
+                    +++ 02
+                </div>
+                <div class="slide">
+                    +++ 03
+                </div>
+            </div>
+            <div class="sliders-pointers">
+                <div class="pointer active"> </div>
+                <div class="pointer"> </div>
+                <div class="pointer"> </div>
+            </div>
+        </section>
     </main>
 
     <footer>
